// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render borderBottom 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background-color: var(--wp-g2-surface-color);
  color: var(--wp-g2-color-text);
  position: relative;
  border-bottom: 1px solid var(--wp-g2-surface-border-color);
  --wp-g2-surface-background-size: 16px;
  --wp-g2-surface-background-size-dotted: 15px;
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-surface wp-components-surface ic-15506ld ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render borderLeft 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background-color: var(--wp-g2-surface-color);
  color: var(--wp-g2-color-text);
  position: relative;
  border-left: 1px solid var(--wp-g2-surface-border-color);
  --wp-g2-surface-background-size: 16px;
  --wp-g2-surface-background-size-dotted: 15px;
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-surface wp-components-surface ic-15506ld ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render borderRight 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background-color: var(--wp-g2-surface-color);
  color: var(--wp-g2-color-text);
  position: relative;
  border-right: 1px solid var(--wp-g2-surface-border-color);
  --wp-g2-surface-background-size: 16px;
  --wp-g2-surface-background-size-dotted: 15px;
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-surface wp-components-surface ic-15506ld ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render borderTop 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background-color: var(--wp-g2-surface-color);
  color: var(--wp-g2-color-text);
  position: relative;
  border-top: 1px solid var(--wp-g2-surface-border-color);
  --wp-g2-surface-background-size: 16px;
  --wp-g2-surface-background-size-dotted: 15px;
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-surface wp-components-surface ic-15506ld ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render borders 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background-color: var(--wp-g2-surface-color);
  color: var(--wp-g2-color-text);
  position: relative;
  border: 1px solid var(--wp-g2-surface-border-color);
  --wp-g2-surface-background-size: 16px;
  --wp-g2-surface-background-size-dotted: 15px;
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-surface wp-components-surface ic-15506ld ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background-color: var(--wp-g2-surface-color);
  color: var(--wp-g2-color-text);
  position: relative;
  --wp-g2-surface-background-size: 16px;
  --wp-g2-surface-background-size-dotted: 15px;
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-surface wp-components-surface ic-15506ld ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render variants 1`] = `
.emotion-0 {
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-family: var(--wp-g2-font-family);
  font-size: var(--wp-g2-font-size);
  font-weight: var(--wp-g2-font-weight);
  margin: 0;
  background-color: var(--wp-g2-surface-color);
  color: var(--wp-g2-color-text);
  position: relative;
  background: var(--wp-g2-surface-background-tint-color);
  --wp-g2-surface-background-size: 16px;
  --wp-g2-surface-background-size-dotted: 15px;
}

@media (prefers-reduced-motion) {
  .emotion-0 {
    -webkit-transition: none!important;
    transition: none!important;
  }
}

[data-system-ui-reduced-motion-mode="true"] .emotion-0 {
  -webkit-transition: none!important;
  transition: none!important;
}

<div
  class="components-surface wp-components-surface ic-15506ld ic-192yz5d emotion-0"
  data-g2-c16t="true"
  data-g2-component="Surface"
>
  Some people are worth melting for.
</div>
`;
